# menu-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  clang_format.settings  fixInstallPrefix.cmake  template.cmake
common/: Consts.h  MenuDescription.cpp  MenuDescription.h  PvtboxClientAPI.cpp  PvtboxClientAPI.h  ws_client.cpp  ws_client.h
common/gtk/: FileInfo.cpp  FileInfo.h  GStringGuard.cpp  GStringGuard.h  Utils.cpp  Utils.h
dolphin/: CMakeLists.txt  PvtboxDolphin.cpp  PvtboxDolphin.h  PvtboxOverlayPlugin.cpp  PvtboxOverlayPlugin.h  README  pvtbox-dolphin-menu.desktop  pvtbox-dolphin-overlay.json
mui/: CMakeLists.txt
nautilus/: CMakeLists.txt  PvtboxNautilus.cpp  PvtboxNautilus.h  WSListener.cpp  WSListener.h
thunar/: Action.cpp  Action.h  CMakeLists.txt  CreateMenuItem.h  Provider.cpp  PvtboxThunar.c
thunarx-3/: CMakeLists.txt  Provider.cpp  Provider.h  PvtboxThunar.c
windows/: CMakeLists.txt  ExportedFunctions.cpp  FileLogger.cpp  FileLogger.h  Icons.cpp  Icons.h  MacroAddInterface.cmake  Resource.h  ShellContextMenu.def  ShellContextMenu.idl  ShellContextMenu.rc  ShellContextMenu.rgs  ShellExt.cpp  ShellExt.h  ShellExt.rgs  dllmain.cpp  dllmain.h  stdafx.h  targetver.h
windows/pvtbox-overlay-icons/: .gitignore  CMakeLists.txt  Overlay.aps  Overlay.cpp  Overlay.h  Overlay.rc  OverlayConstants.h  OverlayFactory.cpp  OverlayFactory.h  OverlayRegistrationHandler.cpp  OverlayRegistrationHandler.h  RemotePathChecker.cpp  RemotePathChecker.h  StringUtil.cpp  StringUtil.h  UtilConstants.h  Version.h  dllmain.cpp  pvtbox-overlays.def  resource.h  stdafx.cpp  stdafx.h  targetver.h
