cmake_minimum_required(VERSION 3.0.2)

Project(menu)

set (CMAKE_CXX_STANDARD 11)

option(ENABLE_LOGGING "enable menu logging" OFF)

if (ENABLE_LOGGING)
    add_definitions(-DENABLE_LOGGING=1)
endif()
add_definitions(-DASIO_STANDALONE=1)
add_definitions(-D_WEBSOCKETPP_NOEXCEPT_=1)
add_definitions(-D_WEBSOCKETPP_CPP11_THREAD_=1)
add_definitions(-D_WEBSOCKETPP_CPP11_CHRONO_=1)
add_definitions(-D_WEBSOCKETPP_CPP11_FUNCTIONAL_=1)
add_definitions(-D_WEBSOCKETPP_CPP11_SYSTEM_ERROR_=1)
add_definitions(-D_WEBSOCKETPP_CPP11_RANDOM_DEVICE_=1)
add_definitions(-D_WEBSOCKETPP_CPP11_MEMORY_=1)
add_definitions(-D_WEBSOCKETPP_CPP11_TYPE_TRAITS_=1)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/asio/asio/include ${CMAKE_CURRENT_SOURCE_DIR}/third_party/websocketpp)

if (${UNIX})
    if (${THUNARX3})
        add_subdirectory(thunarx-3)
    else()
        add_subdirectory(thunar)
    endif()
    add_subdirectory(nautilus)
    add_subdirectory(dolphin)
else()
    add_definitions(-DUNICODE=1 -D_UNICODE=1)
    add_subdirectory(windows)
endif()
